[package]
name = "hello-slang-vulkan-rust-ash-zenn"
version = "0.1.0"
edition = "2024"

[features]
default = ["validation-enabled"]
validation-enabled = []

[dependencies]
anyhow = "1.0.97"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
gpu-allocator = "0.27.0"
winit = "0.30.9"

[build-dependencies]
walkdir = "2"
